<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/textViewLogin"
            android:id="@+id/textViewLogin"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="@dimen/fragmentTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/editTextLoginEmail"
            android:layout_margin="25dp"
            android:hint="@string/editTextLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/editTextLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:text="@string/buttonLogin"
            android:textAlignment="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonCreateLogin"
            android:text="@string/buttonCreateLogin"
            android:textAlignment="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSignOut"
            android:text="@string/buttonSignOut"
            android:textAlignment="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>