<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/createproductscrollview">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars = "vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="10dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="14dp"
                android:textAlignment="center"
                android:text="@string/createproductdescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/createproductproductname" />

            <EditText
                android:id="@+id/createproductname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/createproductproductbrand" />

            <EditText
                android:id="@+id/createproductbrand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/createproductproductlocation" />

            <EditText
                android:id="@+id/createproductlocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:id="@+id/store_name"
                android:text="@string/createproductproductstore" />

            <EditText
                android:id="@+id/createproductstore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/createproductproductregularprice" />

            <EditText
                android:id="@+id/createproductregularprice"
                android:inputType="numberDecimal|numberSigned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />

        </LinearLayout>

        <Button
            android:id="@+id/createproductbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/createproductbutton" />

        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="#000000"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="18dp"
            android:textAlignment="center"
            android:text="@string/retrieveexistingstore" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stores_recyclerview"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:background="#ADD8E6">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>