<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewShowShoppingListFor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:text="@string/shoppingitemdescription" />

            <com.example.shoppapp.NDSpinner
                android:id="@+id/shoppingListStoreSpinner"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showAlertDialogButtonClickedDeleteCurrentShoppingList"
                android:textAlignment="center"
                android:text="@string/buttonDeleteCurrentShoppingList" />

            <TextView
                android:id="@+id/text_view_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/shoppinglist" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/shoppingItem_recyclerview"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="#ADD8E6">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/text_view_i2d"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/basket" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/shoppingItem_recyclerview2"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="#C0C0C0">
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>